# poetry-bug

./: LICENSE  README.md
bar/: pyproject.toml
bar/bar/: __init__.py
foo/: pyproject.toml
