[tool.poetry]
name = "bar"
version = "0.1.0"
description = "A library that depends on `foo`"
authors = ["Ryan Scott"]
license = "BSD License"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
foo = { path = "../foo/", develop = true }

[tool.poetry.dev-dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry>=1.1.4", "setuptools>=40.8.0"]
